--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -3,7 +3,11 @@ import { getCollection } from 'astro:content';
 import BlogLayout from '../../layouts/BlogLayout.astro';
 
 export async function getStaticPaths() {
-  const posts = await getCollection('blog', ({ data }) => !data.draft);
+  // Filter out drafts and future posts (scheduled posts)
+  const posts = await getCollection('blog', ({ data }) => {
+    if (data.draft) return false;
+    return data.pubDate <= new Date();
+  });
   return posts.map((post) => ({
     params: { slug: post.slug },
     props: { post },
