--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -24,15 +24,15 @@ const mobileMenuClass = isDark
       </a>
 
       <!-- Desktop Navigation -->
-      <div class="hidden md:flex gap-6">
+      <div class="hidden md:flex gap-6 items-center">
         <a href="/#features" class={`${linkClass} transition-colors`}>
           Features
         </a>
-        <a href="/#installation" class={`${linkClass} transition-colors`}>
-          Install
-        </a>
         <a href="/blog" class={`${linkClass} transition-colors`}>
           Blog
+        </a>
+        <a href="https://app.aichatwatch.com" class="px-4 py-2 gradient-primary rounded-lg text-white font-medium hover:shadow-lg transition-all">
+          Login
         </a>
       </div>
 
@@ -50,11 +50,11 @@ const mobileMenuClass = isDark
         <a href="/#features" class={`${linkClass} transition-colors`}>
           Features
         </a>
-        <a href="/#installation" class={`${linkClass} transition-colors`}>
-          Install
-        </a>
         <a href="/blog" class={`${linkClass} transition-colors`}>
           Blog
+        </a>
+        <a href="https://app.aichatwatch.com" class="px-4 py-2 gradient-primary rounded-lg text-white font-medium hover:shadow-lg transition-all text-center">
+          Login
         </a>
       </div>
     </div>
