--- a/src/partials/tracking.html
+++ b/src/partials/tracking.html
@@ -1,7 +1,8 @@
 <!-- AICW Tracking Snippet -->
-<!-- Edit this file to update tracking across all pages -->
 <script
   src="https://cdn.aichatwatch.com/aicw-view.js"
   data-key="aa9237f1-44d8-4543-b320-663e871262a8"
+  data-summarize-bar="true"
+  data-summarize-position="right"
   defer
 ></script>
