updated AICW tracking code to new one

--- a/src/partials/tracking.html
+++ b/src/partials/tracking.html
@@ -1,2 +1,7 @@
-<!-- AICW Tracking Snippet -->
-<script src="https://cdn.aicw.io/aicw-view.js" data-key="aa9237f1-44d8-4543-b320-663e871262a8" defer></script>
+<!-- AICW -->
+<script
+  src="https://cdn.aicw.io/aicw-view.min.js"
+  data-key="aa9237f1-44d8-4543-b320-663e871262a8"
+  data-domain="aicw.io,www.aicw.io"
+  defer
+></script>
